// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot — empty states > AlertCenter: no alerts 1`] = `
<div
  aria-label="alerts"
  aria-live="polite"
  class="relative"
  role="region"
>
  <span
    class="relative inline-flex"
  >
    <button
      aria-label="alert center"
      class="relative flex items-center gap-1.5 rounded-md px-2 py-1 text-xs motion-safe:transition-colors text-muted-foreground hover:bg-muted/60"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bell"
        fill="none"
        height="13"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="13"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.268 21a2 2 0 0 0 3.464 0"
        />
        <path
          d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`snapshot — empty states > NewSessionDialog: no phase templates 1`] = `
<dialog
  aria-describedby="_r_1_-desc"
  aria-labelledby="_r_1_-title"
  class="overflow-hidden rounded-lg border border-border bg-background p-0 text-foreground shadow-xl"
  open=""
>
  <div
    class="flex min-h-0 flex-col max-h-[85vh] w-[32rem]"
  >
    <header
      class="flex shrink-0 items-start justify-between gap-4 border-b border-border-soft px-6 py-4"
    >
      <div
        class="flex min-w-0 flex-col gap-1"
      >
        <h2
          class="text-sm font-semibold tracking-tight text-foreground"
          id="_r_1_-title"
        >
          new session
        </h2>
        <p
          class="text-xs leading-relaxed text-muted-foreground"
          id="_r_1_-desc"
        >
          creates a worktree on a fresh branch from the workspace root.
        </p>
      </div>
      <button
        aria-label="close"
        class="-mr-1 -mt-1 flex h-7 w-7 shrink-0 items-center justify-center rounded-md text-muted-foreground motion-safe:transition-colors hover:bg-muted hover:text-foreground"
        type="button"
      >
        <span
          aria-hidden="true"
          class="text-base leading-none"
        >
          ×
        </span>
      </button>
    </header>
    <div
      class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto px-6 py-5 text-sm"
    >
      <div
        class="flex flex-col gap-1.5"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          goal
        </span>
        <textarea
          class="w-full rounded-md border border-border bg-background px-2.5 py-2 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 disabled:opacity-50 resize-none"
          placeholder="refactor auth domain"
          style="height: 0px; overflow-y: hidden;"
        />
        <p
          class="text-xs leading-relaxed text-muted-foreground"
        >
          what the session should accomplish.
        </p>
      </div>
      <div
        class="flex flex-col gap-1.5"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          branch prefix
        </span>
        <input
          class="h-8 w-full rounded-md border border-border bg-background px-2.5 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 disabled:opacity-50"
          placeholder="kay"
          type="text"
          value="kay"
        />
        <p
          class="text-xs leading-relaxed text-muted-foreground"
        >
          branch name will be \`&lt;prefix&gt;/&lt;slug&gt;\`.
        </p>
      </div>
      <div
        class="flex flex-col gap-1.5"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          soft cap (usd)
        </span>
        <input
          class="h-8 w-full rounded-md border border-border bg-background px-2.5 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 disabled:opacity-50"
          min="0"
          placeholder="e.g. 5.00"
          step="0.01"
          type="number"
          value=""
        />
        <p
          class="text-xs leading-relaxed text-muted-foreground"
        >
          optional spend limit. session is flagged when exceeded.
        </p>
      </div>
      <div
        class="flex flex-col gap-1.5"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          workflow (optional)
        </span>
        <div
          class="flex flex-wrap gap-1.5"
        >
          <button
            class="rounded-full px-2.5 py-1 text-xs motion-safe:transition-colors bg-foreground text-background"
            type="button"
          >
            single chat
          </button>
          <button
            class="inline-flex items-center gap-1 rounded-full px-2.5 py-1 text-xs motion-safe:transition-colors bg-subtle text-muted-foreground hover:bg-muted hover:text-foreground"
            title="design a custom workflow with the planner agent"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles"
              fill="none"
              height="11"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="11"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
             design custom
          </button>
        </div>
        <p
          class="text-xs leading-relaxed text-muted-foreground"
        >
          no workflows yet — design one with the planner below.
        </p>
      </div>
      <div
        class="flex flex-col gap-1.5"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          provider
        </span>
        <ul
          class="flex flex-col divide-y divide-border-soft overflow-hidden rounded-md border border-border"
        >
          <li
            class="flex items-center gap-2 px-3 py-2 text-sm motion-safe:transition-colors opacity-50"
          >
            <input
              class="accent-primary"
              disabled=""
              id="provider-anthropic"
              name="provider"
              type="radio"
              value="anthropic"
            />
            <label
              class="flex flex-1 items-center justify-between cursor-not-allowed"
              for="provider-anthropic"
            >
              <span
                class="font-medium"
              >
                claude
              </span>
              <button
                class="text-xs text-primary underline hover:opacity-80"
                type="button"
              >
                connect in settings
              </button>
            </label>
          </li>
          <li
            class="flex items-center gap-2 px-3 py-2 text-sm motion-safe:transition-colors opacity-50"
          >
            <input
              class="accent-primary"
              disabled=""
              id="provider-cursor"
              name="provider"
              type="radio"
              value="cursor"
            />
            <label
              class="flex flex-1 items-center justify-between cursor-not-allowed"
              for="provider-cursor"
            >
              <span
                class="font-medium"
              >
                cursor
              </span>
              <button
                class="text-xs text-primary underline hover:opacity-80"
                type="button"
              >
                connect in settings
              </button>
            </label>
          </li>
          <li
            class="flex items-center gap-2 px-3 py-2 text-sm motion-safe:transition-colors opacity-50"
          >
            <input
              class="accent-primary"
              disabled=""
              id="provider-codex"
              name="provider"
              type="radio"
              value="codex"
            />
            <label
              class="flex flex-1 items-center justify-between cursor-not-allowed"
              for="provider-codex"
            >
              <span
                class="font-medium"
              >
                codex
              </span>
              <button
                class="text-xs text-primary underline hover:opacity-80"
                type="button"
              >
                connect in settings
              </button>
            </label>
          </li>
        </ul>
      </div>
    </div>
    <footer
      class="flex shrink-0 items-center justify-end gap-2 border-t border-border-soft bg-subtle px-6 py-3"
    >
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-8 px-3 text-sm"
        type="button"
      >
        cancel
      </button>
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 bg-primary text-primary-foreground hover:bg-primary/90 h-8 px-3 text-sm"
        disabled=""
        type="button"
      >
        create session
      </button>
    </footer>
  </div>
</dialog>
`;

exports[`snapshot — empty states > ProvidersPanel: no providers (store returns []) 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="text-xs font-semibold text-foreground"
    >
      providers
    </div>
    <button
      class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-7 px-2.5 text-xs"
      title="re-detect installed CLIs"
      type="button"
    >
      refresh all
    </button>
  </div>
  <p
    class="text-2xs text-muted-foreground"
  >
    no providers configured
  </p>
  <p
    class="text-xs text-muted-foreground"
  >
    kay-am orchestrates via each provider's CLI. login is handled by the CLI itself (e.g. run
     
    <code
      class="rounded bg-muted px-1"
    >
      claude
    </code>
     in a terminal once).
  </p>
</div>
`;

exports[`snapshot — empty states > SkillsPanel: no skills 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="text-xs font-semibold text-foreground"
    >
      skills
    </div>
    <div
      class="flex items-center gap-2"
    >
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-7 px-2.5 text-xs"
        type="button"
      >
        rescan
      </button>
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-7 px-2.5 text-xs"
        type="button"
      >
        new skill
      </button>
    </div>
  </div>
  <p
    class="text-2xs text-muted-foreground"
  >
    no skills for this workspace. create one or rescan the workspace directory.
  </p>
</div>
`;

exports[`snapshot — empty states > SlashCommandPopover: no skills / empty items 1`] = `
<div
  class="absolute bottom-full left-0 right-0 z-50 mb-1 overflow-hidden rounded-md border border-border bg-background shadow-md"
>
  <p
    class="px-3 py-2 text-xs text-muted-foreground"
  >
    no skills — create one in settings
  </p>
</div>
`;

exports[`snapshot — empty states > WorkspacesSidebar: no workspace selected 1`] = `
<div
  class="flex h-full min-h-0 flex-col"
>
  <div
    class="overflow-auto [scrollbar-color:var(--color-border)_transparent] [scrollbar-width:thin] max-h-[40%] shrink-0"
  >
    <section
      class="flex flex-col px-2 pb-4 pt-3"
    >
      <header
        class="flex items-baseline justify-between gap-2 px-1 pb-1.5"
      >
        <span
          class="text-2xs font-semibold uppercase tracking-[0.08em] text-muted-foreground"
        >
          workspaces
        </span>
      </header>
      <div
        class="relative flex items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search pointer-events-none absolute left-2 text-muted-foreground"
          fill="none"
          height="11"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <input
          class="w-full rounded-md border border-border-soft bg-muted/40 py-1 pl-6 pr-2 text-xs placeholder:text-muted-foreground/60 focus:outline-none focus:ring-1 focus:ring-primary"
          placeholder="search workspaces…"
          type="text"
        />
      </div>
      <ul
        class="mt-1 flex flex-col gap-0.5"
      >
        <li>
          <button
            class="mt-0.5 flex w-full items-center gap-2 rounded-md border border-dashed border-border-soft px-2 py-1.5 text-left text-xs text-muted-foreground transition-colors hover:border-border hover:bg-muted/50 hover:text-foreground"
            type="button"
          >
            <span
              aria-hidden="true"
              class="text-muted-foreground"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-folder-plus"
                fill="none"
                height="13"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 10v6"
                />
                <path
                  d="M9 13h6"
                />
                <path
                  d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
                />
              </svg>
            </span>
            add workspace
          </button>
        </li>
      </ul>
    </section>
  </div>
  <div
    aria-hidden="true"
    class="my-1 border-t border-border"
  />
  <div
    class="overflow-auto [scrollbar-color:var(--color-border)_transparent] [scrollbar-width:thin] flex-1"
  >
    <section
      class="flex flex-col px-2 pt-4"
    >
      <header
        class="flex items-baseline justify-between gap-2 px-1 pb-1.5"
      >
        <span
          class="text-2xs font-semibold uppercase tracking-[0.08em] text-muted-foreground"
        >
          sessions
        </span>
      </header>
      <p
        class="px-1 py-2 text-xs text-muted-foreground/70"
      >
        select a workspace to see its sessions.
      </p>
    </section>
  </div>
  <dialog
    aria-describedby="_r_0_-desc"
    aria-labelledby="_r_0_-title"
    class="overflow-hidden rounded-lg border border-border bg-background p-0 text-foreground shadow-xl"
  >
    <div
      class="flex min-h-0 flex-col max-h-[85vh] w-[44rem]"
    >
      <header
        class="flex shrink-0 items-start justify-between gap-4 border-b border-border-soft px-6 py-4"
      >
        <div
          class="flex min-w-0 flex-col gap-1"
        >
          <h2
            class="text-sm font-semibold tracking-tight text-foreground"
            id="_r_0_-title"
          >
            add workspace
          </h2>
          <p
            class="text-xs leading-relaxed text-muted-foreground"
            id="_r_0_-desc"
          >
            point at a git repository on disk. each task creates its own worktree.
          </p>
        </div>
        <button
          aria-label="close"
          class="-mr-1 -mt-1 flex h-7 w-7 shrink-0 items-center justify-center rounded-md text-muted-foreground motion-safe:transition-colors hover:bg-muted hover:text-foreground"
          type="button"
        >
          <span
            aria-hidden="true"
            class="text-base leading-none"
          >
            ×
          </span>
        </button>
      </header>
      <div
        class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto px-6 py-5 text-sm"
      >
        <div
          class="flex h-full min-h-0 gap-0"
        >
          <nav
            class="flex w-40 shrink-0 flex-col gap-0.5 overflow-y-auto border-r border-border-soft pr-2"
          >
            <button
              class="flex items-center gap-2 rounded-md px-2 py-1.5 text-left text-sm motion-safe:transition-colors bg-muted font-medium text-foreground"
              type="button"
            >
              <span
                class="flex-1"
              >
                repository
              </span>
            </button>
            <button
              class="flex items-center gap-2 rounded-md px-2 py-1.5 text-left text-sm motion-safe:transition-colors text-muted-foreground hover:bg-muted/60 hover:text-foreground"
              type="button"
            >
              <span
                class="flex-1"
              >
                skills
              </span>
            </button>
            <button
              class="flex items-center gap-2 rounded-md px-2 py-1.5 text-left text-sm motion-safe:transition-colors text-muted-foreground hover:bg-muted/60 hover:text-foreground"
              type="button"
            >
              <span
                class="flex-1"
              >
                workflows
              </span>
            </button>
          </nav>
          <div
            class="min-w-0 flex-1 overflow-y-auto pl-4"
          >
            <div
              class="flex flex-col gap-1.5"
            >
              <span
                class="text-xs font-semibold text-foreground"
              >
                repository path
              </span>
              <div
                class="flex gap-2"
              >
                <input
                  class="h-8 w-full rounded-md border border-border bg-background px-2.5 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 disabled:opacity-50 flex-1"
                  placeholder="/path/to/repo"
                  type="text"
                  value=""
                />
                <button
                  class="inline-flex items-center justify-center gap-1.5 rounded-md border font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 bg-muted text-foreground hover:bg-muted/70 border-border h-8 px-3 text-sm"
                  type="button"
                >
                  browse
                </button>
              </div>
              <p
                class="text-xs leading-relaxed text-muted-foreground"
              >
                the directory must contain a \`.git\` folder.
              </p>
            </div>
          </div>
        </div>
      </div>
      <footer
        class="flex shrink-0 items-center justify-end gap-2 border-t border-border-soft bg-subtle px-6 py-3"
      >
        <button
          class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-8 px-3 text-sm"
          type="button"
        >
          cancel
        </button>
        <button
          class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 bg-primary text-primary-foreground hover:bg-primary/90 h-8 px-3 text-sm"
          disabled=""
          type="button"
        >
          add workspace
        </button>
      </footer>
    </div>
  </dialog>
</div>
`;

exports[`snapshot — error states > App init error — BootSplash with error message 1`] = `
<div
  class="flex h-screen flex-col items-center justify-center gap-3 bg-background text-foreground"
>
  <div
    class="text-sm font-semibold tracking-tight"
  >
    kAY.am
  </div>
  <div
    class="flex w-72 flex-col gap-2"
  >
    <p
      class="text-xs text-muted-foreground"
    >
      boot error
    </p>
    <div
      class="h-1 w-full overflow-hidden rounded-full bg-muted"
    >
      <div
        class="h-full bg-primary motion-safe:transition-all"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="flex w-72 flex-col gap-3 rounded-lg border border-danger/30 bg-danger/5 p-4"
    role="alert"
  >
    <div
      class="flex flex-col gap-1"
    >
      <span
        class="text-xs font-semibold uppercase tracking-wide text-danger"
      >
        initialization
         failed
      </span>
      <p
        class="text-xs text-danger/80"
      >
        database migration failed
      </p>
    </div>
    <div
      class="flex flex-col gap-2"
    >
      <button
        class="rounded-md border border-border px-3 py-1.5 text-xs text-muted-foreground motion-safe:transition-colors hover:bg-muted"
        type="button"
      >
        open logs
      </button>
      <button
        class="text-left text-xs text-muted-foreground underline-offset-2 hover:underline"
        type="button"
      >
        report on github ↗
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshot — error states > BootSplash: boot-error phase 1`] = `
<div
  class="flex h-screen flex-col items-center justify-center gap-3 bg-background text-foreground"
>
  <div
    class="text-sm font-semibold tracking-tight"
  >
    kAY.am
  </div>
  <div
    class="flex w-72 flex-col gap-2"
  >
    <p
      class="text-xs text-muted-foreground"
    >
      boot error
    </p>
    <div
      class="h-1 w-full overflow-hidden rounded-full bg-muted"
    >
      <div
        class="h-full bg-primary motion-safe:transition-all"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="flex w-72 flex-col gap-3 rounded-lg border border-danger/30 bg-danger/5 p-4"
    role="alert"
  >
    <div
      class="flex flex-col gap-1"
    >
      <span
        class="text-xs font-semibold uppercase tracking-wide text-danger"
      >
        initialization
         failed
      </span>
      <p
        class="text-xs text-danger/80"
      >
        detecting-cli failed
      </p>
    </div>
    <div
      class="flex flex-col gap-2"
    >
      <button
        class="rounded-md border border-border px-3 py-1.5 text-xs text-muted-foreground motion-safe:transition-colors hover:bg-muted"
        type="button"
      >
        open logs
      </button>
      <button
        class="text-left text-xs text-muted-foreground underline-offset-2 hover:underline"
        type="button"
      >
        report on github ↗
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshot — error states > BudgetRulesPanel: form error 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="text-xs font-semibold text-foreground"
    >
      budget rules
    </div>
    <button
      class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-7 px-2.5 text-xs"
      type="button"
    >
      add rule
    </button>
  </div>
  <p
    class="text-xs text-muted-foreground"
  >
    no rules defined. add one to cap monthly spend per provider.
  </p>
</div>
`;

exports[`snapshot — error states > EndSessionDialog: error state 1`] = `
<dialog
  aria-describedby="_r_3_-desc"
  aria-labelledby="_r_3_-title"
  class="overflow-hidden rounded-lg border border-border bg-background p-0 text-foreground shadow-xl"
  open=""
>
  <div
    class="flex min-h-0 flex-col max-h-[85vh] w-[24rem]"
  >
    <header
      class="flex shrink-0 items-start justify-between gap-4 border-b border-border-soft px-6 py-4"
    >
      <div
        class="flex min-w-0 flex-col gap-1"
      >
        <h2
          class="text-sm font-semibold tracking-tight text-foreground"
          id="_r_3_-title"
        >
          end session?
        </h2>
        <p
          class="text-xs leading-relaxed text-muted-foreground"
          id="_r_3_-desc"
        >
          the worktree directory will be removed. the branch is preserved for manual merge.
        </p>
      </div>
      <button
        aria-label="close"
        class="-mr-1 -mt-1 flex h-7 w-7 shrink-0 items-center justify-center rounded-md text-muted-foreground motion-safe:transition-colors hover:bg-muted hover:text-foreground"
        type="button"
      >
        <span
          aria-hidden="true"
          class="text-base leading-none"
        >
          ×
        </span>
      </button>
    </header>
    <div
      class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto px-6 py-5 text-sm"
    >
      <div
        class="rounded-md border border-border-soft bg-subtle px-3 py-2 text-xs text-muted-foreground"
      >
        <span
          class="font-mono text-foreground"
        >
          test goal
        </span>
      </div>
    </div>
    <footer
      class="flex shrink-0 items-center justify-end gap-2 border-t border-border-soft bg-subtle px-6 py-3"
    >
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-8 px-3 text-sm"
        type="button"
      >
        cancel
      </button>
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 bg-danger text-danger-foreground hover:bg-danger/90 h-8 px-3 text-sm"
        type="button"
      >
        end session
      </button>
    </footer>
  </div>
</dialog>
`;

exports[`snapshot — error states > NewSessionDialog: form error 1`] = `
<dialog
  aria-describedby="_r_2_-desc"
  aria-labelledby="_r_2_-title"
  class="overflow-hidden rounded-lg border border-border bg-background p-0 text-foreground shadow-xl"
  open=""
>
  <div
    class="flex min-h-0 flex-col max-h-[85vh] w-[32rem]"
  >
    <header
      class="flex shrink-0 items-start justify-between gap-4 border-b border-border-soft px-6 py-4"
    >
      <div
        class="flex min-w-0 flex-col gap-1"
      >
        <h2
          class="text-sm font-semibold tracking-tight text-foreground"
          id="_r_2_-title"
        >
          new session
        </h2>
        <p
          class="text-xs leading-relaxed text-muted-foreground"
          id="_r_2_-desc"
        >
          creates a worktree on a fresh branch from the workspace root.
        </p>
      </div>
      <button
        aria-label="close"
        class="-mr-1 -mt-1 flex h-7 w-7 shrink-0 items-center justify-center rounded-md text-muted-foreground motion-safe:transition-colors hover:bg-muted hover:text-foreground"
        type="button"
      >
        <span
          aria-hidden="true"
          class="text-base leading-none"
        >
          ×
        </span>
      </button>
    </header>
    <div
      class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto px-6 py-5 text-sm"
    >
      <div
        class="flex flex-col gap-1.5"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          goal
        </span>
        <textarea
          class="w-full rounded-md border border-border bg-background px-2.5 py-2 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 disabled:opacity-50 resize-none"
          placeholder="refactor auth domain"
          style="height: 0px; overflow-y: hidden;"
        />
        <p
          class="text-xs leading-relaxed text-muted-foreground"
        >
          what the session should accomplish.
        </p>
      </div>
      <div
        class="flex flex-col gap-1.5"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          branch prefix
        </span>
        <input
          class="h-8 w-full rounded-md border border-border bg-background px-2.5 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 disabled:opacity-50"
          placeholder="kay"
          type="text"
          value="kay"
        />
        <p
          class="text-xs leading-relaxed text-muted-foreground"
        >
          branch name will be \`&lt;prefix&gt;/&lt;slug&gt;\`.
        </p>
      </div>
      <div
        class="flex flex-col gap-1.5"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          soft cap (usd)
        </span>
        <input
          class="h-8 w-full rounded-md border border-border bg-background px-2.5 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 disabled:opacity-50"
          min="0"
          placeholder="e.g. 5.00"
          step="0.01"
          type="number"
          value=""
        />
        <p
          class="text-xs leading-relaxed text-muted-foreground"
        >
          optional spend limit. session is flagged when exceeded.
        </p>
      </div>
      <div
        class="flex flex-col gap-1.5"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          workflow (optional)
        </span>
        <div
          class="flex flex-wrap gap-1.5"
        >
          <button
            class="rounded-full px-2.5 py-1 text-xs motion-safe:transition-colors bg-foreground text-background"
            type="button"
          >
            single chat
          </button>
          <button
            class="inline-flex items-center gap-1 rounded-full px-2.5 py-1 text-xs motion-safe:transition-colors bg-subtle text-muted-foreground hover:bg-muted hover:text-foreground"
            title="design a custom workflow with the planner agent"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles"
              fill="none"
              height="11"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="11"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
             design custom
          </button>
        </div>
        <p
          class="text-xs leading-relaxed text-muted-foreground"
        >
          no workflows yet — design one with the planner below.
        </p>
      </div>
      <div
        class="flex flex-col gap-1.5"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          provider
        </span>
        <ul
          class="flex flex-col divide-y divide-border-soft overflow-hidden rounded-md border border-border"
        >
          <li
            class="flex items-center gap-2 px-3 py-2 text-sm motion-safe:transition-colors opacity-50"
          >
            <input
              class="accent-primary"
              disabled=""
              id="provider-anthropic"
              name="provider"
              type="radio"
              value="anthropic"
            />
            <label
              class="flex flex-1 items-center justify-between cursor-not-allowed"
              for="provider-anthropic"
            >
              <span
                class="font-medium"
              >
                claude
              </span>
              <button
                class="text-xs text-primary underline hover:opacity-80"
                type="button"
              >
                connect in settings
              </button>
            </label>
          </li>
          <li
            class="flex items-center gap-2 px-3 py-2 text-sm motion-safe:transition-colors opacity-50"
          >
            <input
              class="accent-primary"
              disabled=""
              id="provider-cursor"
              name="provider"
              type="radio"
              value="cursor"
            />
            <label
              class="flex flex-1 items-center justify-between cursor-not-allowed"
              for="provider-cursor"
            >
              <span
                class="font-medium"
              >
                cursor
              </span>
              <button
                class="text-xs text-primary underline hover:opacity-80"
                type="button"
              >
                connect in settings
              </button>
            </label>
          </li>
          <li
            class="flex items-center gap-2 px-3 py-2 text-sm motion-safe:transition-colors opacity-50"
          >
            <input
              class="accent-primary"
              disabled=""
              id="provider-codex"
              name="provider"
              type="radio"
              value="codex"
            />
            <label
              class="flex flex-1 items-center justify-between cursor-not-allowed"
              for="provider-codex"
            >
              <span
                class="font-medium"
              >
                codex
              </span>
              <button
                class="text-xs text-primary underline hover:opacity-80"
                type="button"
              >
                connect in settings
              </button>
            </label>
          </li>
        </ul>
      </div>
    </div>
    <footer
      class="flex shrink-0 items-center justify-end gap-2 border-t border-border-soft bg-subtle px-6 py-3"
    >
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-8 px-3 text-sm"
        type="button"
      >
        cancel
      </button>
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 bg-primary text-primary-foreground hover:bg-primary/90 h-8 px-3 text-sm"
        disabled=""
        type="button"
      >
        create session
      </button>
    </footer>
  </div>
</dialog>
`;

exports[`snapshot — error states > PermissionsPanel: form error (workspace scope) 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="text-xs font-semibold text-foreground"
    >
      permission rules
    </div>
    <button
      class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-7 px-2.5 text-xs"
      type="button"
    >
      add rule
    </button>
  </div>
  <div
    class="flex gap-1"
  >
    <button
      class="rounded px-2.5 py-1 text-xs font-medium motion-safe:transition-colors bg-foreground text-background"
      type="button"
    >
      global
    </button>
    <button
      class="rounded px-2.5 py-1 text-xs font-medium motion-safe:transition-colors text-muted-foreground hover:text-foreground"
      type="button"
    >
      workspace
    </button>
    <button
      class="rounded px-2.5 py-1 text-xs font-medium motion-safe:transition-colors text-muted-foreground hover:text-foreground"
      type="button"
    >
      task
    </button>
  </div>
</div>
`;

exports[`snapshot — error states > ProvidersPanel: provider in error state 1`] = `
<div
  class="flex flex-col gap-3"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="text-xs font-semibold text-foreground"
    >
      providers
    </div>
    <button
      class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-7 px-2.5 text-xs"
      title="re-detect installed CLIs"
      type="button"
    >
      refresh all
    </button>
  </div>
  <ul
    class="flex flex-col divide-y divide-border-soft overflow-hidden rounded-md border border-border-soft bg-subtle shadow-sm"
  >
    <li
      class="flex items-center gap-3 px-3 py-2.5 text-xs"
    >
      <span
        aria-hidden="true"
        class="inline-block h-2 w-2 shrink-0 rounded-full bg-danger"
      />
      <div
        class="flex min-w-0 flex-1 flex-col gap-0.5"
      >
        <div
          class="flex items-center gap-2"
        >
          <span
            class="font-medium"
          >
            claude
          </span>
          <code
            class="text-2xs text-muted-foreground"
          >
            claude
          </code>
          <span
            class="rounded bg-muted px-1 text-2xs text-muted-foreground"
          >
            1.0.0
          </span>
        </div>
        <div
          class="text-xs"
        >
          <span
            class="text-danger"
          >
            unknown error
          </span>
        </div>
      </div>
      <button
        class="inline-flex items-center justify-center gap-1.5 rounded-md border border-transparent font-medium motion-safe:transition-colors disabled:pointer-events-none disabled:opacity-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/40 text-foreground hover:bg-muted h-7 px-2.5 text-xs shrink-0"
        type="button"
      >
        retry
      </button>
    </li>
  </ul>
  <p
    class="text-xs text-muted-foreground"
  >
    kay-am orchestrates via each provider's CLI. login is handled by the CLI itself (e.g. run
     
    <code
      class="rounded bg-muted px-1"
    >
      claude
    </code>
     in a terminal once).
  </p>
</div>
`;

exports[`snapshot — error states > TranscriptCard: turn error item 1`] = `
<div
  class="rounded-md border border-danger/40 bg-danger/5 px-3 py-2 text-sm text-danger"
>
  provider failed to respond
</div>
`;
